--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "axios": "^1.5.1",
     "bootstrap": "^4.0.0",
     "bootstrap-vue": "^2.0.0-rc.28",
