--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.0.0",
     "bootstrap-vue": "^2.0.0-rc.28",
     "jquery": "^3.7.1",
+    "moment": "^2.29.4",
     "vue": "^2.5.11",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
